--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: 'Oswald', sans-serif;
     font-weight: 400;
-    
+    color: #5D5D7D;
 }
 
 .wrapper {
@@ -31,7 +31,7 @@
 
 img {
     position: relative;
-    top: 25%;
+    top: 10%;
     right: 130px;
 }
 
